Added support for audio device selection. 90% of the way there.

--- a/assets/gain/gain.html
+++ b/assets/gain/gain.html
@@ -64,6 +64,7 @@
         var meterControl = 0;
 
         function OnParamChange(param, value) {
+            console.log("here");
             if (param == gainParam) {
                 $('.gainKnob')
                     .val(value);
