--- a/plugins/nuke/ui/debug.html
+++ b/plugins/nuke/ui/debug.html
@@ -8,16 +8,23 @@
     <title>ui</title>
     
     
-    <script type="text/javascript" src="./scripts/client.js"></script>
+    <script type="text/javascript" src="./scripts/aa.js"></script>
+<script type="text/javascript" src="./scripts/client.js"></script>
 <script type="text/javascript" src="./scripts/renderer.js"></script>
 <script type="text/javascript" src="./scripts/vector.js"></script>
 
-  </head>
-  <body>
+  
+    <script>
+    </script>
+    </head>
+  <body onload=onLoad()>
     <script>
       const client = new Client()
       client.install(document.body)
       window.addEventListener('load', () => { 
+        console.log = console.error = (str) => {
+          sendMsg(console_msg, 0, str);
+        }
         client.start()
       })
     </script>
