Updated Gain/Nuke UI to work with remote server, in particular relative paths.

--- a/plugins/gain/ui/gain.html
+++ b/plugins/gain/ui/gain.html
@@ -51,10 +51,9 @@
             float: left;
         }        
     </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src = "/js/support.js"></script>
-    <script src = "/gain/js/jquery.knob.min.js"></script>
-    <script src = "/gain/js/vumeter.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src = "../js/support.js"></script>
+    <script src = "./js/jquery.knob.min.js"></script>
     
     <script>
         var sendParam = 1;
