Updated UIs to work correctly with remote server setup.

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,8 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <base href="http://127.0.0.1:8000">
+
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>
 
     <style type="text/css">
@@ -67,7 +69,7 @@
             background: var(--accent);
             color: rgba(255, 0, 0, 0.0);
             padding: 5px 10px;
-            background: url("http://127.0.0.1:8000/muses_text_logo.svg") no-repeat;
+            background: url("./muses_text_logo.svg") no-repeat;
             background-position: center;
           }
 
@@ -78,7 +80,7 @@
             background: var(--accent);
             color: rgba(255, 0, 0, 0.0);
             padding: 5px 10px;
-            background: url("http://127.0.0.1:8000/aa_logo.svg") no-repeat;
+            background: url("./aa_logo.svg") no-repeat;
             background-position: center;
           }
 
@@ -98,10 +100,10 @@
 
         
     </style>
-    <link rel="stylesheet" type="text/css" href="http://127.0.0.1:8000/css/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/semantic.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src = "http://127.0.0.1:8000/js/support.js"></script>
-    <script src = "http://127.0.0.1:8000/js/semantic.min.js"></script>
+    <script src = "./js/support.js"></script>
+    <script src = "./js/semantic.min.js"></script>
 
     <style>
         body {
