--- a/assets/nuke/nuke.html
+++ b/assets/nuke/nuke.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ui</title>
-    <script src = "/js/support.js"></script>
+    <title></title>
+    <script src = "../js/support.js"></script>
     <script>
     </script>
   </head>
